Bug 52815 - get rid of third tab stop inside <input type=file>.  Patch from pete.zha@sun.com, r=bryner, sr=attinasi, a=asa.